# CLI-Manager

./: .gitignore  .gitnexusrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.en-US.md  README.md  README.zh-CN.md  package-lock.json  package.json  verification.md  vite.config.ts
.github/scripts/: build-ssh-agent-release.mjs  prepare-r2-release.mjs  prepare-r2-release.test.mjs  test-install-ssh-agent.sh
.github/workflows/: ci.yml  release.yml  ssh-agent-check.yml  ssh-agent-release.yml
.trellis/: .template-hashes.json  workflow.md
.trellis/agents/: check.md  implement.md
docs/: pty-daemon-manual.md  terminal-known-issues.md  terminal-validation-checklist.md  功能清单.md  历史备份与恢复设计.md  历史来源接入规划.md  历史来源解析器分批接入计划.md  历史索引库设计.md
docs/debugging/: codex-git-bash-input-theme.md
pet-packs/: README.md
pet-packs/mint-slime/: manifest.json
pet-packs/pixel-fox/: manifest.json
pet-packs/terminal-robot/: manifest.json
public/pet-catalog/: catalog.json
scripts/: Cargo(1).toml  agentTerminal.test.mjs  cliArgsHistory.test.mjs  codexAppServerProxy.e2e.test.mjs  desktopPetMenuGeometry.test.mjs  desktopPetSize.test.mjs  desktopPetTransport.test.mjs  dragInteraction.test.mjs  externalSessionSyncPolicy.test.mjs  fileExplorerIgnore.test.mjs  gitStoreRemote.test.mjs  historyProjectPaths.test.mjs  install-ssh-agent.sh  prepare-bundle-binaries.mjs  ptyHostSocket.test.mjs  resumeCliArgs.test.mjs  systemFonts.test.mjs  tauri-cli.mjs  tauriCliDevProxy.test.mjs  terminalCliSession.test.mjs  terminalExitCleanup.test.mjs  terminalExitTask.test.mjs  terminalFileLinks.test.mjs  terminalImageAddonCsp.test.mjs  terminalOsc.test.mjs  terminalProcessManager.test.mjs  terminalReflowPolicy.test.mjs  terminalRemountSnapshot.test.mjs  terminalReplay.test.mjs  terminalResizeDebouncer.test.mjs  terminalResizeRenderBarrier.test.mjs  terminalSplitLayout.test.mjs  terminalVisibility.test.mjs  terminalWorkspan.test.mjs  verify-macos-window-controls.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  ssh-agent-public-key.txt  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/history-core/: Cargo.toml
src-tauri/history-core/src/: lib.rs
src-tauri/hook-schema/: Cargo.toml
src-tauri/hook-schema/src/: lib.rs
src-tauri/resources/conpty/: README.md
src-tauri/resources/ssh-agent/: README.md
src-tauri/src/: app_paths.rs  ccswitch_db.rs  claude_hook.rs  codex_app_server_proxy.rs  codex_statusline.rs  conpty_sideload.rs  crash_reporter.rs  credential_store.rs  file_watcher.rs  git_watcher.rs  hook_client.rs  lib.rs  main.rs  process_job.rs  shell_resolver.rs  ssh_agent_supply_chain.rs  ssh_askpass.rs  ssh_launch.rs  ssh_proxy.rs  ssh_transport.rs  statusline.rs  statusline_profiles.rs  wsl.rs
src-tauri/src/commands/: cc_connect.rs  ccswitch.rs  ccusage.rs  command_suggestion.rs  db_repair.rs  desktop_pet.rs  fs.rs  git.rs  git_worktree.rs  history.rs  history_backup.rs  history_edit.rs  history_sources.rs  hook_settings.rs  mod.rs  model_pricing.rs  shell.rs  ssh.rs  ssh_config.rs  ssh_db.rs  ssh_files.rs  ssh_git.rs  ssh_integration.rs  subagent_transcript.rs  sync.rs  system_resources.rs  terminal.rs  third_party_notification.rs
src-tauri/src/commands/cc_connect/: handoff.rs  handoff_notification.rs  handoff_session.rs
src-tauri/src/commands/history/: catalog.rs
src-tauri/src/daemon/: client.rs  discovery.rs  mod.rs  protocol.rs  server.rs  ssh_agent_bridge.rs
src-tauri/src/pty/: manager.rs  mod.rs  osc_color.rs  tauri_sink.rs
src-tauri/src/pty/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/third_party_notification/: adapters.rs  dispatcher.rs  http.rs  mod.rs  model.rs
src-tauri/src/webdav/: mod.rs
src-tauri/ssh-agent/: Cargo.toml
src-tauri/ssh-agent/src/: files.rs  git.rs  history.rs  hook_config.rs  hook_runtime.rs  installer.rs  layout.rs  lib.rs  main.rs  protocol.rs
src/components/: AppErrorBoundary.tsx  BackgroundTasksPanel.tsx  CliToolIcon.tsx  CloseConfirmDialog.tsx  CommandHistoryPanel.tsx  CommandPalette.tsx  CommandTemplatePanel.tsx  ConfigModal.tsx  ExternalSessionSyncDialog.tsx  HistoryWorkspace.tsx  ProviderSwitchModal.tsx  RunningTasksExitDialog.tsx  SettingsModal.tsx  SplitTerminalView.tsx  TerminalTabs.tsx  WindowTitleBar.tsx  XTermTerminal.tsx  icons.ts
src/desktop-pet/: DesktopPetApp.tsx  desktopPet.css
src/hooks/: useDesktopPetCoordinator.ts  useKeyboardShortcuts.ts  useRemoteHandoffCoordinator.ts  useSaveSessionToSidebar.tsx  useSystemResources.ts  useTerminalContextMenu.ts  useTerminalDisplay.ts  useTerminalInput.ts  useTerminalOsc.ts  useTerminalSearch.ts
src/lib/: agentTerminal.ts  cliArgsHistory.ts  cliTools.ts  db.ts  desktopPet.ts  desktopPetMenu.ts  desktopPetSize.ts  desktopPetTransport.ts  diffParser.worker.ts  dragInteraction.ts  externalTerminal.ts  fileExplorerIgnore.ts  gitTransport.ts  historyPathArgs.ts  historyProjectPaths.ts  historySources.ts  hookErrors.ts  i18n.ts  logger.ts  monacoSetup.ts  projectCapabilities.ts  projectStartupCommand.ts  ptyEnv.ts  remoteHandoff.ts  resumeCliArgs.ts  saveSessionToSidebar.ts  sessionSnapshotPersistence.ts  shell.ts  shellSelectOptions.ts  sidebarCommands.ts  singleFlight.ts  ssh.ts  sshAgentHistory.ts  sshClientIdentity.ts  sshRemoteFiles.ts  sshRemoteGit.ts  sshToolIntegration.ts  statusline.ts  statuslineProfiles.ts  syncSettings.ts  (+24 more)
src/stores/: backgroundOperationStore.ts  ccusageStore.ts  (+18 more)
tests/: ptyEnv.test.ts  shellSelectOptions.test.ts  terminalResizeSync.test.ts
(+901 files in other folders)
