[package]
name = "cli-manager-history-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shared Claude and Codex remote history protocol and parser"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
